@@ -24,7 +24,7 @@ if ( !$dbh ) {
    plan skip_all => 'Cannot connect to sandbox master';
 }
 else {
-   plan tests => 3;
+   plan tests => 5;
 }
 
 my $output;
@@ -73,6 +73,38 @@ issue_519 t     `i` >= '7' AND `i` < '10'
 issue_519 t     `i` >= '10'
 ",
    "Use --chunk-index"
+);
+
+$output = output(
+   sub { mk_table_checksum::main(@args, qw(--chunk-index y)) },
+);
+
+is(
+   $output,
+"issue_519 t     SELECT /*issue_519.t:1/4*/ 0 AS chunk_num, COUNT(*) AS cnt, LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)) AS crc FROM `issue_519`.`t` FORCE INDEX (`y`) WHERE (`y` < '2003')
+issue_519 t     `y` < '2003'
+issue_519 t     `y` >= '2003' AND `y` < '2006'
+issue_519 t     `y` >= '2006' AND `y` < '2009'
+issue_519 t     `y` >= '2009'
+",
+   "Chunks on left-most --chunk-index column"
+);
+
+# Disabling the index hint with --no-use-index should not affect the
+# chunks.  It should only remove the FORCE INDEX clause from the SQL.
+$output = output(
+   sub { mk_table_checksum::main(@args, qw(--chunk-index y --no-use-index)) },
+);
+
+is(
+   $output,
+"issue_519 t     SELECT /*issue_519.t:1/4*/ 0 AS chunk_num, COUNT(*) AS cnt, LOWER(CONV(BIT_XOR(CAST(CRC32(CONCAT_WS('#', `i`, `y`, `t`, CONCAT(ISNULL(`t`)))) AS UNSIGNED)), 10, 16)) AS crc FROM `issue_519`.`t`  WHERE (`y` < '2003')
+issue_519 t     `y` < '2003'
+issue_519 t     `y` >= '2003' AND `y` < '2006'
+issue_519 t     `y` >= '2006' AND `y` < '2009'
+issue_519 t     `y` >= '2009'
+",
+   "No index hint with --no-use-index"
 );
 
 # #############################################################################
